force-app/main/default/objects/BLN_PaymentStatMapping__mdt/BLN_PaymentStatMapping__mdt.object-meta.xml
<CustomObject>
    <description>FOUK-3977 This is used on BLN_SCUtility class</description>
    <label>Payment Status Mapping</label>
    <pluralLabel>BLN_PaymentStatMapping__mdt</pluralLabel>
</CustomObject>