force-app/main/default/objects/BLN_PaymentStatMapping__mdt/fields/BLN_PaymentGateway__c.field-meta.xml
<CustomField>
    <fullName>BLN_PaymentGateway__c</fullName>
    <description>FOUK-3977 This is used BLN_SCUtility class</description>
    <label>Payment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>WorldPay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>