force-app/main/default/objects/BLN_PaymentStatMapping__mdt/fields/BLN_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>BLN_PaymentMethod__c</fullName>
    <description>FOUK-3977 This is used in BLN_SCUtility class</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Assisted</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>