force-app/main/default/objects/BLN_PaymentStatMapping__mdt/fields/BLN_ResponseStatus__c.field-meta.xml
<CustomField>
    <fullName>BLN_ResponseStatus__c</fullName>
    <description>FOUK-3977 This is used in BLN_SCUtility class</description>
    <label>Response Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>CAPTURED</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>FAILURE</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>authorized</fullName>
            </value>
            <value>
                <fullName>refused</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
            <value>
                <fullName>DECLINED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>