force-app/main/default/objects/BLN_PaymentStatMapping__mdt/fields/BLN_SalesforceStatus__c.field-meta.xml
<CustomField>
    <fullName>BLN_SalesforceStatus__c</fullName>
    <description>FOUK-3977 This is used in BLN_SCUtility class</description>
    <label>Salesforce Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INITIATED</fullName>
                <default>true</default>
                <label>INITIATED</label>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>DECLINE</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>