force-app/main/default/objects/BLN_PaymentStatMapping__mdt/listViews/BLN_AllMetadatas.listView-meta.xml
<ListView>
    <fullName>BLN_AllMetadatas</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BLN_PaymentGateway__c</columns>
    <columns>BLN_PaymentMethod__c</columns>
    <columns>BLN_ResponseStatus__c</columns>
    <columns>BLN_SalesforceStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Metadatas</label>
    <language>en_US</language>
</ListView>